Fixed tooltip overlapping issue with startmenu

--- a/app/_components/TooltipContainer/component.module.css
+++ b/app/_components/TooltipContainer/component.module.css
@@ -1,5 +1,5 @@
 .container {
-  z-index: 10;
+  /* z-index: 10; */
 }
 .tooltip {
   /* position: relative; */
